// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button applies the elementAttributes prop correctly 1`] = `
<div
  data-radium={true}
>
  <button
    aria-label="foo"
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button can render a different parent element if HTML element is passed 1`] = `
<div
  data-radium={true}
>
  <span
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Renders span as parent
  </span>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button can render a different parent element if React component is passed 1`] = `
<div
  data-radium={true}
>
  <div
    disabled={false}
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Array [
        Object {
          "MozOsxFontSmoothing": "grayscale",
          "WebkitFontSmoothing": "antialiased",
          "alignItems": "center",
          "backgroundImage": "none",
          "border": "1px solid transparent",
          "borderBottomLeftRadius": 4,
          "borderBottomRightRadius": 4,
          "borderTopLeftRadius": 4,
          "borderTopRightRadius": 4,
          "cursor": "pointer",
          "display": "inline-flex",
          "fontWeight": 600,
          "touchAction": "manipulation",
          "userSelect": "none",
          "whiteSpace": "nowrap",
        },
        Object {
          "fontSize": "16px",
          "height": "40px",
          "paddingLeft": 16,
          "paddingRight": 16,
        },
        Object {
          ":active": Object {
            "backgroundColor": "#146e04",
          },
          ":focus": Object {
            "backgroundColor": "#146e04",
          },
          ":hover": Object {
            "backgroundColor": "#177D05",
          },
          "backgroundColor": "#43B02A",
          "color": "#FFFFFF",
        },
        false,
        false,
        undefined,
      ]
    }
    type="button"
  >
    Renders Foo as parent
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button can render as a link if an href is provided 1`] = `
<div
  data-radium={true}
>
  <a
    data-radium={true}
    disabled={false}
    href="/carrot"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "boxSizing": "border-box",
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
  </a>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders all sizes correctly 1`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "11px",
        "fontWeight": 600,
        "height": "24px",
        "paddingLeft": 8,
        "paddingRight": 8,
        "textTransform": "uppercase",
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Primary Button
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders all sizes correctly 2`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "14px",
        "fontWeight": 600,
        "height": "32px",
        "paddingLeft": 8,
        "paddingRight": 8,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Primary Button
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders all sizes correctly 3`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Primary Button
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders all sizes correctly 4`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "18px",
        "fontWeight": 600,
        "height": "48px",
        "paddingLeft": 24,
        "paddingRight": 24,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Primary Button
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders all snacks button variants correctly 1`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders all snacks button variants correctly 2`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "transparent",
        "backgroundImage": "none",
        "border": "1px solid #43B02A",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#43B02A",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders all snacks button variants correctly 3`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "transparent",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#43B02A",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders all snacks button variants correctly 4`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "backgroundImage": "none",
        "border": "1px dashed #E6003D",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#E6003D",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders correctly when disabled 1`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={true}
    onClick={[Function]}
    onMouseDown={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#BDBDBD",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "not-allowed",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders icons correctly 1`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    <i
      aria-hidden={true}
      data-radium={true}
      style={
        Object {
          "fontFamily": "ic-icons",
          "fontSize": "16px",
          "fontSmoothing": "antialiased",
          "fontStyle": "normal",
          "fontVariant": "normal",
          "fontWeight": "normal",
          "lineHeight": "1",
          "osxFontSmoothing": "grayscale",
          "position": "relative",
          "speak": "none",
          "textTransform": "none",
        }
      }
    >
      
    </i>
    <span
      data-radium={true}
      style={
        Object {
          "marginRight": 8,
        }
      }
    />
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders icons correctly 2`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
    <span
      data-radium={true}
      style={
        Object {
          "marginLeft": 8,
        }
      }
    />
    <i
      aria-hidden={true}
      data-radium={true}
      style={
        Object {
          "fontFamily": "ic-icons",
          "fontSize": "16px",
          "fontSmoothing": "antialiased",
          "fontStyle": "normal",
          "fontVariant": "normal",
          "fontWeight": "normal",
          "lineHeight": "1",
          "osxFontSmoothing": "grayscale",
          "position": "relative",
          "speak": "none",
          "textTransform": "none",
        }
      }
    >
      
    </i>
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders icons correctly 3`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    <i
      aria-hidden={true}
      data-radium={true}
      style={
        Object {
          "fontFamily": "ic-icons",
          "fontSize": "16px",
          "fontSmoothing": "antialiased",
          "fontStyle": "normal",
          "fontVariant": "normal",
          "fontWeight": "normal",
          "lineHeight": "1",
          "osxFontSmoothing": "grayscale",
          "position": "relative",
          "speak": "none",
          "textTransform": "none",
        }
      }
    >
      
    </i>
    <span
      data-radium={true}
      style={
        Object {
          "marginRight": 8,
        }
      }
    />
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders icons correctly 4`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#43B02A",
        "backgroundImage": "none",
        "border": "1px solid transparent",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#FFFFFF",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "16px",
        "fontWeight": 600,
        "height": "40px",
        "paddingLeft": 16,
        "paddingRight": 16,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
    <span
      data-radium={true}
      style={
        Object {
          "marginLeft": 8,
        }
      }
    />
    <i
      aria-hidden={true}
      data-radium={true}
      style={
        Object {
          "fontFamily": "ic-icons",
          "fontSize": "16px",
          "fontSmoothing": "antialiased",
          "fontStyle": "normal",
          "fontVariant": "normal",
          "fontWeight": "normal",
          "lineHeight": "1",
          "osxFontSmoothing": "grayscale",
          "position": "relative",
          "speak": "none",
          "textTransform": "none",
        }
      }
    >
      
    </i>
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`Button renders with inverted colors 1`] = `
<div
  data-radium={true}
>
  <button
    data-radium={true}
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "MozOsxFontSmoothing": "grayscale",
        "WebkitFontSmoothing": "antialiased",
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "backgroundImage": "none",
        "border": "1px solid #43B02A",
        "borderBottomLeftRadius": 4,
        "borderBottomRightRadius": 4,
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
        "color": "#43B02A",
        "cursor": "pointer",
        "display": "inline-flex",
        "fontSize": "14px",
        "fontWeight": 600,
        "height": "32px",
        "paddingLeft": 8,
        "paddingRight": 8,
        "touchAction": "manipulation",
        "userSelect": "none",
        "whiteSpace": "nowrap",
      }
    }
    type="button"
  >
    Hi
  </button>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
